--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = catkin_pkg
+url = http://pypi.debian.net/catkin_pkg/catkin_pkg-0.2.10.tar.gz
+archives = 
+giturl = 
+
 [autospec]
 # build 32 bit libraries
 32bit = false
