--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = catkin_pkg
 url = http://pypi.debian.net/catkin_pkg/catkin_pkg-0.2.10.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/ros-infrastructure/catkin_pkg.git
 
 [autospec]
 # build 32 bit libraries
