Fix up pypi provides and requires

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/81/90/9f882469fd1b9548fe960f70613d
 archives = 
 giturl = https://github.com/ros-infrastructure/catkin_pkg.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
